# mini-crm

./: .gitignore  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: .env.example  pyproject.toml  railway.toml  requirements.txt
backend/apps/accounts/: admin.py  models.py  serializers.py  views.py
backend/apps/accounts/management/commands/: seed_data.py  seed_menderes.py  seed_menderes_data.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_seed_default_roles.py
backend/apps/core/: admin.py  models.py  permissions.py  validators.py  viewsets.py
backend/apps/ledger/: admin.py  models.py  payment_plan_services.py  serializers.py  services.py  validators.py  views.py
backend/apps/ledger/migrations/: 0001_initial.py  0002_paymentplan.py  0003_alter_paymentplan_created_by_and_more.py
backend/apps/parties/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/parties/migrations/: 0001_initial.py
backend/apps/projects/: admin.py  models.py  serializers.py  services.py  setup.py  views.py
backend/apps/projects/management/commands/: sync_family_memberships.py
backend/apps/projects/migrations/: 0001_initial.py  0002_unit_building_fields.py
backend/config/: api_urls.py  env.py  exceptions.py  schema_views.py  urls.py
backend/config/settings/: base.py  local.py  production.py
backend/tests/: conftest.py  test_api.py  test_settings.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/login/: page.tsx
frontend/components/: providers.tsx
(+44 files in other folders)
