[project]
name = "mini-erp-backend"
version = "0.1.0"
description = "Kentsel dönüşüm financial tracking backend"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<6",
    "djangorestframework>=3.15,<4",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
