[project]
name = "mini-erp-backend"
version = "0.1.0"
description = "Kentsel dönüşüm financial tracking backend"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<6",
    "djangorestframework>=3.15,<4",
    "djangorestframework-simplejwt>=5.3,<6",
    "django-cors-headers>=4.3,<5",
    "drf-spectacular>=0.27,<1",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py"]
testpaths = ["tests"]
